
set(MACHGUI_SOURCES
    MachGuiFPCommand.cpp
    MachGuiFPCommand.hpp
    actbmpnm.cpp
    actbmpnm.hpp
    actnamid.cpp
    actnamid.hpp
    animatio.cpp
    animatio.hpp
    autodel.cpp
    autodel.hpp
    bildicns.cpp
    bildicns.hpp
    bildmenu.cpp
    bildmenu.hpp
    bmutext.cpp
    bmutext.hpp
    bufscbut.cpp
    bufscbut.hpp
    buildbar.cpp
    buildbar.hpp
    buildmci.cpp
    buildmci.hpp
    cameras.cpp
    cameras.hpp
    camscrol.cpp
    camscrol.hpp
    chatmsgd.cpp
    chatmsgd.hpp
    chatmsgs.cpp
    chatmsgs.hpp
    chatwind.cpp
    chatwind.hpp
    chckbox.cpp
    chckbox.hpp
    cmdassem.cpp
    cmdassem.hpp
    cmdattac.cpp
    cmdattac.hpp
    cmdbuild.cpp
    cmdbuild.hpp
    cmdcamo.cpp
    cmdcamo.hpp
    cmdcaptr.cpp
    cmdcaptr.hpp
    cmdconst.cpp
    cmdconst.hpp
    cmddamag.cpp
    cmddamag.hpp
    cmddecon.cpp
    cmddecon.hpp
    cmddefau.cpp
    cmddefau.hpp
    cmddefcn.cpp
    cmddefcn.hpp
    cmddeplo.cpp
    cmddeplo.hpp
    cmddestr.cpp
    cmddestr.hpp
    cmdfrmsq.cpp
    cmdfrmsq.hpp
    cmdheal.cpp
    cmdheal.hpp
    cmdionat.cpp
    cmdionat.hpp
    cmdlmine.cpp
    cmdlmine.hpp
    cmdlocto.cpp
    cmdlocto.hpp
    cmdmove.cpp
    cmdmove.hpp
    cmdnukat.cpp
    cmdnukat.hpp
    cmdpatro.cpp
    cmdpatro.hpp
    cmdpicku.cpp
    cmdpicku.hpp
    cmdrecyc.cpp
    cmdrecyc.hpp
    cmdrefil.cpp
    cmdrefil.hpp
    cmdrepar.cpp
    cmdrepar.hpp
    cmdresea.cpp
    cmdresea.hpp
    cmdscav.cpp
    cmdscav.hpp
    cmdstand.cpp
    cmdstand.hpp
    cmdstop.cpp
    cmdstop.hpp
    cmdtrans.cpp
    cmdtrans.hpp
    cmdtrech.cpp
    cmdtrech.hpp
    command.cpp
    command.hpp
    commandi.cpp
    commbank.cpp
    commbank.hpp
    conselic.cpp
    conselic.hpp
    consicns.cpp
    consicns.hpp
    consmenu.cpp
    consmenu.hpp
    controli.cpp
    controlp.cpp
    controlp.hpp
    corral.cpp
    corral.hpp
    ctrladon.cpp
    ctrladon.hpp
    ctxbrief.cpp
    ctxbrief.hpp
    ctxcamp.cpp
    ctxcamp.hpp
    ctxdebrf.cpp
    ctxdebrf.hpp
    ctxhotky.cpp
    ctxhotky.hpp
    ctxingam.cpp
    ctxingam.hpp
    ctxjoin.cpp
    ctxjoin.hpp
    ctxload.cpp
    ctxload.hpp
    ctxmmenu.cpp
    ctxmmenu.hpp
    ctxmulti.cpp
    ctxmulti.hpp
    ctxoptns.cpp
    ctxoptns.hpp
    ctxready.cpp
    ctxready.hpp
    ctxsave.cpp
    ctxsave.hpp
    ctxscenr.cpp
    ctxscenr.hpp
    ctxsetng.cpp
    ctxsetng.hpp
    ctxsingl.cpp
    ctxsingl.hpp
    ctxskirm.cpp
    ctxskirm.hpp
    ctxstats.cpp
    ctxstats.hpp
    database.cpp
    database.hpp
    databasi.cpp
    dbelemei.cpp
    dbelemen.cpp
    dbelemen.hpp
    dbhandlr.cpp
    dbhandlr.hpp
    dbplanei.cpp
    dbplanet.cpp
    dbplanet.hpp
    dbplayei.cpp
    dbplayer.cpp
    dbplayer.hpp
    dbplysci.cpp
    dbplyscn.cpp
    dbplyscn.hpp
    dbsavgai.cpp
    dbsavgam.cpp
    dbsavgam.hpp
    dbscenai.cpp
    dbscenar.cpp
    dbscenar.hpp
    dbsystei.cpp
    dbsystem.cpp
    dbsystem.hpp
    dbtexdai.cpp
    dbtexdat.cpp
    dbtexdat.hpp
    ddrawdrop.cpp
    ddrawdrop.hpp
    dispmess.cpp
    dispmess.hpp
    dispnoti.cpp
    dispnoti.hpp
    dropdown.cpp
    dropdown.hpp
    dropdwnc.cpp
    dropdwnc.hpp
    dummy.cpp
    editbox.cpp
    editbox.hpp
    editlist.cpp
    editlist.hpp
    email.cpp
    email.hpp
    factbuff.cpp
    factbuff.hpp
    focusctl.cpp
    focusctl.hpp
    fstpersn.cpp
    fstpersn.hpp
    gammacor.cpp
    gammacor.hpp
    genstats.cpp
    genstats.hpp
    gui.cpp
    gui.hpp
    guictrl.cpp
    guictrl.hpp
    health.cpp
    health.hpp
    hwrbicns.cpp
    hwrbicns.hpp
    hwrbicon.cpp
    hwrbicon.hpp
    hwrebank.cpp
    hwrebank.hpp
    hwreicns.cpp
    hwreicns.hpp
    hwreicon.cpp
    hwreicon.hpp
    hwremenu.cpp
    hwremenu.hpp
    igameimp.cpp
    igcurs2d.cpp
    igcurs2d.hpp
    ingame.cpp
    ingame.hpp
    intcurac.cpp
    intcurac.hpp
    internal/commandi.hpp
    internal/controli.hpp
    internal/databasi.hpp
    internal/dbelemei.hpp
    internal/dbplanei.hpp
    internal/dbplayei.hpp
    internal/dbplysci.hpp
    internal/dbsavgai.hpp
    internal/dbscenai.hpp
    internal/dbsystei.hpp
    internal/dbtexdai.hpp
    internal/igameimp.hpp
    internal/mapareai.hpp
    internal/mgsndman.hpp
    internal/playeri.hpp
    internal/playscri.hpp
    internal/startui.hpp
    internal/strings.hpp
    istype.hpp
    keyboard.cpp
    lsgextra.cpp
    lsgextra.hpp
    machnav.cpp
    machnav.hpp
    map.cpp
    map.hpp
    maparea.cpp
    maparea.hpp
    mapareai.cpp
    mdinternet.cpp
    mdinternet.hpp
    mdipx.cpp
    mdipx.hpp
    mdmodem.cpp
    mdmodem.hpp
    mdnetwork.cpp
    mdnetwork.hpp
    mdserial.cpp
    mdserial.hpp
    menubutn.cpp
    menubutn.hpp
    menutext.cpp
    menutext.hpp
    messbrok.cpp
    messbrok.hpp
    mextemp.cpp
    mextemp.hpp
    mgsndman.cpp
    msgbox.cpp
    msgbox.hpp
    msgboxei.cpp
    msgboxei.hpp
    musicvol.cpp
    musicvol.hpp
    numpdrop.cpp
    numpdrop.hpp
    oneicon.cpp
    oneicon.hpp
    optlayout.cpp
    optlayout.hpp
    playeri.cpp
    playerit.cpp
    playerit.hpp
    playscri.cpp
    prodbank.cpp
    prodbank.hpp
    prodicns.cpp
    prodicns.hpp
    prodicon.cpp
    prodicon.hpp
    promtext.cpp
    promtext.hpp
    radar.cpp
    radar.hpp
    resodial.cpp
    resodial.hpp
    restorer.cpp
    restorer.hpp
    root.hpp
    sclayout.cpp
    sclayout.hpp
    scrlarea.cpp
    scrlarea.hpp
    scrltext.cpp
    scrltext.hpp
    scrolbar.cpp
    scrolbar.hpp
    slidebar.cpp
    slidebar.hpp
    soundvol.cpp
    soundvol.hpp
    squadron.cpp
    squadron.hpp
    sslistbx.cpp
    sslistbx.hpp
    sslistit.cpp
    sslistit.hpp
    startctx.cpp
    startctx.hpp
    startup.cpp
    startup.hpp
    statbar.cpp
    statbar.hpp
    statdisp.cpp
    statdisp.hpp
    statistics.cpp
    statistics.hpp
    strtdata.cpp
    strtdata.hpp
    sysmess.cpp
    sysmess.hpp
    text.cpp
    text.hpp
    textdisp.cpp
    textdisp.hpp
    typemap.cpp
    typemap.hpp
    worldvie.cpp
    worldvie.hpp
)

add_library(machgui OBJECT ${MACHGUI_SOURCES})
