
set(MACHLOG_SOURCES
    MachLog1stPersonActiveSquad.cpp
    MachLog1stPersonActiveSquad.hpp
    MachLog1stPersonOpDispatch.hpp
    MachLog1stPersonTargetInfo.hpp
    actanim.cpp
    actanim.hpp
    actenabl.cpp
    actenabl.hpp
    actexplo.cpp
    actexplo.hpp
    actflag.cpp
    actflag.hpp
    actions.cpp
    actions.hpp
    actlost.cpp
    actlost.hpp
    actmaker.cpp
    actmaker.hpp
    actor.cpp
    actor.hpp
    actori.cpp
    actracec.cpp
    actracec.hpp
    actreinf.cpp
    actreinf.hpp
    actsquad.cpp
    actsquad.hpp
    acttasks.cpp
    acttasks.hpp
    actvmail.cpp
    actvmail.hpp
    actwin.cpp
    actwin.hpp
    actworl.cpp
    actworl.hpp
    administ.cpp
    administ.hpp
    aggressr.cpp
    aggressr.hpp
    animatio.cpp
    animatio.hpp
    animres.cpp
    animres.hpp
    apc.cpp
    apc.hpp
    apci.cpp
    armourer.cpp
    armourer.hpp
    artefact.cpp
    artefact.hpp
    artefact.ipp
    artfacts.cpp
    artfacts.hpp
    artfctsi.cpp
    attack.cpp
    attack.hpp
    attacki.cpp
    attafilt.cpp
    attafilt.hpp
    beacon.cpp
    beacon.hpp
    beacon.ipp
    beebomb.cpp
    beebomb.hpp
    beebomex.cpp
    beebomex.hpp
    beebomxi.cpp
    beeweap.cpp
    beeweap.hpp
    bolter.cpp
    bolter.hpp
    boltewep.hpp
    buildpnt.cpp
    buildpnt.hpp
    camera.cpp
    camera.hpp
    camerai.cpp
    canadmin.cpp
    canadmin.hpp
    canattac.cpp
    canattac.hpp
    canattai.cpp
    canmove.cpp
    canmove.hpp
    charger.cpp
    charger.hpp
    cntrl.cpp
    cntrl.hpp
    cntrl_ai.cpp
    cntrl_ai.hpp
    cntrl_pc.cpp
    cntrl_pc.hpp
    cntrlaii.cpp
    collinfo.cpp
    condanya.cpp
    condanya.hpp
    condbmus.cpp
    condbmus.hpp
    conddead.cpp
    conddead.hpp
    condfire.cpp
    condfire.hpp
    condflag.cpp
    condflag.hpp
    condhuni.cpp
    condhuni.hpp
    condnot.cpp
    condnot.hpp
    condoded.cpp
    condoded.hpp
    condpod.cpp
    condpod.hpp
    condreac.cpp
    condreac.hpp
    condrese.cpp
    condrese.hpp
    condtime.cpp
    condtime.hpp
    condtrea.cpp
    condtrea.hpp
    condunit.cpp
    condunit.hpp
    condview.cpp
    condview.hpp
    condvort.cpp
    condvort.hpp
    consitei.cpp
    consitem.cpp
    consitem.hpp
    consplan.hpp
    constree.cpp
    constree.hpp
    constrei.cpp
    constroi.cpp
    constron.cpp
    constron.hpp
    constron.ipp
    construc.cpp
    construc.hpp
    convyoff.cpp
    convyoff.hpp
    creatdat.cpp
    creatdat.hpp
    ctreenot.hpp
    dbhandlr.cpp
    dbhandlr.hpp
    debris.cpp
    debris.hpp
    destroy.hpp
    dispnoti.cpp
    dispnoti.hpp
    dyingeni.cpp
    dyingent.cpp
    dyingent.hpp
    elecharg.cpp
    elecharg.hpp
    electro.cpp
    electro.hpp
    entrance.cpp
    entrance.hpp
    expandbi.cpp
    expandbl.cpp
    expandbl.hpp
    factory.cpp
    factory.hpp
    factory.ipp
    factoryi.cpp
    findspac.cpp
    findspac.hpp
    flamebal.cpp
    flamebal.hpp
    flamethr.cpp
    flamethr.hpp
    follow.cpp
    follow.hpp
    followi.cpp
    garrisoi.cpp
    garrison.cpp
    garrison.hpp
    garrison.ipp
    geolocat.cpp
    geolocat.hpp
    grpmove.cpp
    grpmove.hpp
    grpmovei.cpp
    grpmover.cpp
    grpmover.hpp
    grpmvinf.cpp
    grpmvinf.hpp
    grpmvinf.ipp
    grpmvutl.cpp
    hwlab.cpp
    hwlab.hpp
    hwlab.ipp
    hwlabi.cpp
    inout.cpp
    inout.hpp
    internal
    ionbeam.cpp
    ionbeam.hpp
    ionbeami.cpp
    ionweap.cpp
    ionweap.hpp
    lineproj.cpp
    lineproj.hpp
    lmine.cpp
    lmine.hpp
    lmissile.cpp
    lmissile.hpp
    lmisslch.cpp
    lmisslch.hpp
    lsgextra.cpp
    lsgextra.hpp
    machine.cpp
    machine.hpp
    machinei.cpp
    machlog.cpp
    machlog.hpp
    machop.hpp
    machvman.cpp
    machvman.hpp
    mapper.cpp
    mapper.hpp
    mcconvoi.cpp
    mcconvoy.cpp
    mcconvoy.hpp
    mcconvoy.ipp
    mcmotse2.cpp
    mcmotseq.cpp
    mcmotseq.hpp
    mcmotseq.ipp
    message.cpp
    message.hpp
    messbro1.cpp
    messbro2.cpp
    messbrok.cpp
    messbrok.hpp
    mine.cpp
    mine.hpp
    mine.ipp
    minesite.cpp
    minesite.hpp
    minesiti.cpp
    misshold.cpp
    misshold.hpp
    missile.cpp
    missile.hpp
    missilem.cpp
    missilem.hpp
    missilem.ipp
    mlnotif.cpp
    mlnotif.hpp
    mobile.cpp
    mobile.hpp
    motconst.cpp
    motconst.hpp
    move.cpp
    move.hpp
    movei.cpp
    mulaunch.cpp
    mulaunch.hpp
    netimpl.cpp
    network.cpp
    network.hpp
    nuclbomb.cpp
    nuclbomb.hpp
    nuclbomi.cpp
    nuclmiss.cpp
    nuclmiss.hpp
    nuclweap.cpp
    nuclweap.hpp
    opadatta.cpp
    opadatta.hpp
    opadcapt.cpp
    opadcapt.hpp
    opadcon.cpp
    opadcon.hpp
    opaddeco.cpp
    opaddeco.hpp
    opadheal.cpp
    opadheal.hpp
    opadloc.cpp
    opadloc.hpp
    opadloci.cpp
    opadmove.cpp
    opadmove.hpp
    opadmovi.cpp
    opadrepa.cpp
    opadrepa.hpp
    opadsupc.cpp
    opadsupc.hpp
    opautsci.cpp
    opautscv.cpp
    opautscv.hpp
    opcaptur.cpp
    opcaptur.hpp
    opconstr.cpp
    opconstr.hpp
    opcounte.cpp
    opcounte.hpp
    opcounti.cpp
    opdapc.cpp
    opdapc.hpp
    opdapci.cpp
    opdecons.cpp
    opdecons.hpp
    opeapc.cpp
    opeapc.hpp
    operatii.cpp
    operatio.cpp
    operatio.hpp
    opevade.cpp
    opevade.hpp
    opevadei.cpp
    opgolab.cpp
    opgolab.hpp
    opheal.cpp
    opheal.hpp
    oplaboui.cpp
    oplabour.cpp
    oplabour.hpp
    oplmine.cpp
    oplmine.hpp
    oplminei.cpp
    oplocate.cpp
    oplocate.hpp
    opmeatta.cpp
    opmeatta.hpp
    opmeatti.cpp
    opnukeat.cpp
    opnukeat.hpp
    oppickui.cpp
    oppickup.cpp
    oppickup.hpp
    oppodatt.cpp
    oppodatt.hpp
    opputdwi.cpp
    opputdwn.cpp
    opputdwn.hpp
    oprecycl.cpp
    oprecycl.hpp
    oprefill.cpp
    oprefill.hpp
    oprepair.cpp
    oprepair.hpp
    opscav.cpp
    opscav.hpp
    opscavi.cpp
    opstandg.cpp
    opstandg.hpp
    opsupcon.cpp
    opsupcon.hpp
    optransi.cpp
    optransp.cpp
    optransp.hpp
    optreach.cpp
    optreach.hpp
    optsk.cpp
    optsk.hpp
    optskatt.cpp
    optskatt.hpp
    optskcon.cpp
    optskcon.hpp
    optskdrm.cpp
    optskdrm.hpp
    optskloc.cpp
    optskloc.hpp
    optskpat.cpp
    optskpat.hpp
    oreholo.cpp
    oreholo.hpp
    p1handlr.cpp
    p1handlr.hpp
    p1mchndl.cpp
    p1mchndl.hpp
    p1remman.cpp
    p1remman.hpp
    patrol.cpp
    patrol.hpp
    percons.cpp
    percons.hpp
    permach.cpp
    permach.hpp
    perops.cpp
    perops.hpp
    perother.cpp
    perother.hpp
    persist.cpp
    persist.hpp
    perweap.cpp
    perweap.hpp
    plandoms.cpp
    plandoms.hpp
    planet.cpp
    planet.hpp
    planet.ipp
    planeti.cpp
    plasmawe.cpp
    plasmawe.hpp
    plasmbol.cpp
    plasmbol.hpp
    pod.cpp
    pod.hpp
    pod.ipp
    podi.cpp
    presspad.cpp
    presspad.hpp
    produnit.cpp
    produnit.hpp
    pulseblb.cpp
    pulseblb.hpp
    pulsewep.cpp
    pulsewep.hpp
    punch.cpp
    punch.hpp
    punchi.cpp
    punweap.cpp
    punweap.hpp
    race.cpp
    race.hpp
    races.cpp
    races.hpp
    racesimp.cpp
    rescarr.cpp
    rescarr.hpp
    rescarri.cpp
    resitem.cpp
    resitem.hpp
    resitemi.cpp
    restree.cpp
    restree.hpp
    restreei.cpp
    scenario.cpp
    scenario.hpp
    score.cpp
    score.hpp
    scorei.cpp
    seekdest.cpp
    seekdest.hpp
    seqdata.cpp
    smelter.cpp
    smelter.hpp
    smelter.ipp
    spacial.cpp
    spacial.hpp
    spiral.cpp
    spiral.hpp
    spy.cpp
    spy.hpp
    squad.cpp
    squad.hpp
    squadi.cpp
    statimpl.cpp
    stats.cpp
    stats.hpp
    stglwep.cpp
    stglwep.hpp
    stgmwep.cpp
    stgmwep.hpp
    stingl.cpp
    stingl.hpp
    stingm.cpp
    stingm.hpp
    strategy.cpp
    strategy.hpp
    stretchy.hpp
    sysmess.cpp
    sysmess.hpp
    technici.cpp
    technici.hpp
    teststretchy.cpp
    treachry.cpp
    treachry.hpp
    trechorb.cpp
    trechorb.hpp
    vmail.cpp
    vmaili.cpp
    vmdata.hpp
    vmman.cpp
    vmman.hpp
    vmman2.cpp
    vmmani.cpp
    vortbomb.cpp
    vortbomb.hpp
    vortbomi.cpp
    vortweap.cpp
    vortweap.hpp
    weapon.cpp
    weapon.hpp
    wepline.cpp
    wepline.hpp
)

add_library(machlog OBJECT ${MACHLOG_SOURCES})
