
set(MACHPHYS_SOURCES
    administ.cpp
    administ.hpp
    admndata.cpp
    admndata.hpp
    aggrdata.cpp
    aggrdata.hpp
    aggressr.cpp
    aggressr.hpp
    apc.cpp
    apcdata.cpp
    apcdata.hpp
    apc.hpp
    armourer.cpp
    armourer.hpp
    artefact.cpp
    artefact.hpp
    artefact.ipp
    artfdata.cpp
    artfdata.hpp
    artfdata.ipp
    attack.cpp
    attack.hpp
    attacki.cpp
    beacdata.cpp
    beacdata.hpp
    beacon.cpp
    beacon.hpp
    beam.cpp
    beam.hpp
    beebomb.cpp
    beebombe.cpp
    beebombe.hpp
    beebomb.hpp
    beewave.cpp
    beewave.hpp
    beeweap.cpp
    beeweap.hpp
    blast.cpp
    blast.hpp
    bolter.cpp
    bolter.hpp
    bsphere.cpp
    bsphere.hpp
    cexpdata.cpp
    cexpdata.hpp
    charger.cpp
    charger.hpp
    codynlig.cpp
    codynlig.hpp
    compitem.cpp
    compitem.hpp
    compmgr.cpp
    compmgr.hpp
    consdata.cpp
    consdata.hpp
    consdata.ipp
    consper.cpp
    constroi.cpp
    constron.cpp
    constron.hpp
    construc.cpp
    construc.hpp
    cosky.cpp
    cosky.hpp
    covaptra.cpp
    covaptra.hpp
    crakfire.cpp
    crakfire.hpp
    crakfiri.cpp
    ctordata.cpp
    ctordata.hpp
    damage.cpp
    damage.hpp
    damagei.cpp
    damagwav.cpp
    damagwav.hpp
    dataimpl.cpp
    dataimpl.hpp
    datapars.cpp
    datastr.cpp
    dblflame.cpp
    dblflame.hpp
    debris.cpp
    debris.hpp
    debrisun.cpp
    debrisun.hpp
    destroy.hpp
    domasign.cpp
    domasign.hpp
    door.cpp
    door.hpp
    effects.cpp
    effects.hpp
    elecharg.cpp
    elecharg.hpp
    electro.cpp
    electro.hpp
    entrance.cpp
    entrance.hpp
    epp.cpp
    epp.hpp
    epps.cpp
    epps.hpp
    expholdr.cpp
    expholdr.hpp
    exppoint.cpp
    facepl.cpp
    facepl.hpp
    factdata.cpp
    factdata.hpp
    factory.cpp
    factory.hpp
    firebali.cpp
    fireball.cpp
    fireball.hpp
    flamebal.cpp
    flamebal.hpp
    flames.cpp
    flames.hpp
    flamethr.cpp
    flamethr.hpp
    flash.cpp
    flash.hpp
    garrdata.cpp
    garrdata.hpp
    garrison.cpp
    garrison.hpp
    genedata.cpp
    genedata.hpp
    geolocai.cpp
    geolocat.cpp
    geolocat.hpp
    glider.cpp
    glider.hpp
    glideri.cpp
    glocdata.cpp
    glocdata.hpp
    halo.cpp
    halo.hpp
    halompln.cpp
    halompln.hpp
    harddata.cpp
    harddata.hpp
    healaura.cpp
    healaura.hpp
    healhelx.cpp
    healhelx.hpp
    healthma.cpp
    helix.cpp
    helix.hpp
    hover.cpp
    hover.hpp
    hoveri.cpp
    hsphere.cpp
    hsphere.hpp
    hwlab.cpp
    hwlab.hpp
    internal/attacki.hpp
    internal/consdati.hpp
    internal/constroi.hpp
    internal/crakfiri.hpp
    internal/damagei.hpp
    internal/dataimpl.ctf
    internal/dataimpl.hpp
    internal/datapars.hpp
    internal/firebali.hpp
    internal/geolocai.hpp
    internal/glideri.hpp
    internal/healthma.hpp
    internal/hoveri.hpp
    internal/itrack.hpp
    internal/lineprji.hpp
    internal/locomoim.hpp
    internal/machdati.hpp
    internal/machdati.ipp
    internal/machinei.hpp
    internal/mexidata.hpp
    internal/mexidata.ipp
    internal/missilei.hpp
    internal/plansuri.hpp
    internal/racechbo.hpp
    internal/spideri.hpp
    internal/spylocai.hpp
    internal/tracksi.hpp
    internal/wheelsi.hpp
    ionbeam.cpp
    ionbeam.hpp
    ionweap.cpp
    ionweap.hpp
    itrack.cpp
    jetringm.cpp
    jetringm.hpp
    jetringp.cpp
    jetringp.hpp
    largemsl.cpp
    largemsl.hpp
    legalwep.cpp
    legalwep.hpp
    legcombo.cpp
    legcombo.hpp
    levels.cpp
    levels.hpp
    levindmp.cpp
    levindmp.hpp
    light.cpp
    light.hpp
    lineprji.cpp
    lineproj.cpp
    lineproj.hpp
    linkdata.cpp
    linkdata.hpp
    lmine.cpp
    lmine.hpp
    loading.cpp
    loading.hpp
    loadligh.cpp
    loadligh.hpp
    loadover.cpp
    loadover.hpp
    loadunde.cpp
    loadunde.hpp
    locator.cpp
    locator.hpp
    locomoim.cpp
    locomoti.cpp
    locomoti.hpp
    machburn.cpp
    machburn.hpp
    machdata.cpp
    machdata.hpp
    machdati.cpp
    machdmg.cpp
    machdmg.hpp
    machexp.cpp
    machexp.hpp
    machine.cpp
    machine.hpp
    machinei.cpp
    machper.cpp
    machphys.cpp
    machphys.hpp
    MachPhysMoveIndicator.cpp
    MachPhysMoveIndicator.hpp
    marker.cpp
    marker.hpp
    matconv.cpp
    matconv.hpp
    mccospec.cpp
    mccospec.hpp
    mcdmgdat.cpp
    mcdmgdat.hpp
    mcmovinf.cpp
    mcmovinf.hpp
    mcmovinf.ipp
    mexidata.cpp
    mexpdata.cpp
    mexpdata.hpp
    mine.cpp
    minedata.cpp
    minedata.hpp
    mine.hpp
    missemp.cpp
    missemp.hpp
    missile.cpp
    missile.hpp
    missilei.cpp
    move.hpp
    mphydata.cpp
    mphydata.hpp
    msemdata.cpp
    msemdata.hpp
    mulaunch.cpp
    mulaunch.hpp
    mushedge.cpp
    mushedge.hpp
    mushshaf.cpp
    mushshaf.hpp
    mushtop.cpp
    mushtop.hpp
    nuclbomb.cpp
    nuclbomb.hpp
    nuclweap.cpp
    nuclweap.hpp
    nukewave.cpp
    nukewave.hpp
    objdata.cpp
    objdata.hpp
    objdemol.cpp
    objdemol.hpp
    objexplo.cpp
    objexplo.hpp
    objexplo.ipp
    ofactory.ctf
    ofactory.ctp
    ofactory.hpp
    orehdata.cpp
    orehdata.hpp
    oreholo.cpp
    oreholo.hpp
    orientpl.cpp
    orientpl.hpp
    ostfact.ctp
    ostfact.hpp
    otherper.cpp
    p1driver.cpp
    p1driver.hpp
    p1mcdriv.cpp
    p1mcdriv.hpp
    particle.cpp
    particle.hpp
    persist.cpp
    persist.hpp
    plansurf.cpp
    plansurf.hpp
    plansurf.ipp
    plansuri.cpp
    plasaura.cpp
    plasaura.hpp
    plasmawe.cpp
    plasmawe.hpp
    plasmbol.cpp
    plasmbol.hpp
    plasplat.cpp
    plasplat.hpp
    pod.cpp
    poddata.cpp
    poddata.hpp
    pod.hpp
    preload.cpp
    preload.hpp
    private/consper.hpp
    private/datastr.hpp
    private/exppoint.hpp
    private/machper.hpp
    private/otherper.hpp
    private/weapper.hpp
    puffdata.hpp
    pulsaura.cpp
    pulsaura.hpp
    pulseblb.cpp
    pulseblb.hpp
    pulsewep.cpp
    pulsewep.hpp
    pulsewep.ipp
    pulsplat.cpp
    pulsplat.hpp
    punch.cpp
    punch.hpp
    punweap.cpp
    punweap.hpp
    racechbo.cpp
    racechng.cpp
    racechng.hpp
    radidisc.cpp
    radidisc.hpp
    rampacce.hpp
    random.cpp
    random.hpp
    rcardata.cpp
    rcardata.hpp
    rescarr.cpp
    rescarr.hpp
    scavenge.cpp
    scavenge.hpp
    shockwav.cpp
    shockwav.hpp
    slocdata.cpp
    slocdata.hpp
    smeldata.cpp
    smeldata.hpp
    smelter.cpp
    smelter.hpp
    smkcloud.cpp
    smkcloud.hpp
    smokplum.cpp
    smokplum.hpp
    smokpuff.cpp
    smokpuff.hpp
    snddata.hpp
    sndplan.cpp
    sndplan.hpp
    softdata.cpp
    softdata.hpp
    sparks.cpp
    sparks.hpp
    spider.cpp
    spider.hpp
    spideri.cpp
    splat.cpp
    splat.hpp
    spylocai.cpp
    spylocat.cpp
    spylocat.hpp
    station.cpp
    station.hpp
    stations.cpp
    stations.hpp
    stflames.cpp
    stflames.hpp
    stglwep.cpp
    stglwep.hpp
    stgmwep.cpp
    stgmwep.hpp
    stingl.cpp
    stingl.hpp
    stingm.cpp
    stingm.hpp
    stlaura.cpp
    stlaura.hpp
    stlsplat.cpp
    stlsplat.hpp
    subid.ctp
    subid.hpp
    surfchk.cpp
    surfchk.hpp
    symparse.cpp
    symparse.hpp
    techdata.cpp
    techdata.hpp
    technici.cpp
    technici.hpp
    terrtile.cpp
    terrtile.hpp
    ti_files/ti_admin.cpp
    ti_files/ti_aggr.cpp
    ti_files/ti_apc.cpp
    ti_files/ti_bk.cpp
    ti_files/ti_const.cpp
    ti_files/ti_fa.cpp
    ti_files/ti_ga.cpp
    ti_files/ti_gloc.cpp
    ti_files/ti_hw.cpp
    ti_files/ti_mis.cpp
    ti_files/ti_missi.cpp
    ti_files/ti_mn.cpp
    ti_files/ti_pod.cpp
    ti_files/ti_rcarr.cpp
    ti_files/ti_sloc.cpp
    ti_files/ti_sm.cpp
    ti_files/ti_tech.cpp
    tileboun.cpp
    tileboun.hpp
    tileboun.ipp
    tiledata.cpp
    tiledata.hpp
    tiledata.ipp
    torch.cpp
    torch.hpp
    tracks.cpp
    tracks.hpp
    tracksi.cpp
    trailprj.cpp
    trailprj.hpp
    treachry.cpp
    treachry.hpp
    trechorb.cpp
    trechorb.hpp
    turn.hpp
    turntrak.cpp
    turntrak.hpp
    turntrak.ipp
    vappuff.cpp
    vappuff.hpp
    vaptrail.cpp
    vaptrail.hpp
    virusspr.cpp
    virusspr.hpp
    vortbomb.cpp
    vortbomb.hpp
    vortweap.cpp
    vortweap.hpp
    vsphere.cpp
    vsphere.hpp
    waterfal.cpp
    waterfal.hpp
    weapdata.cpp
    weapdata.hpp
    weapon.cpp
    weapon.hpp
    weapon.ipp
    weapper.cpp
    wepdata.cpp
    wepdata.hpp
    wepdata.ipp
    wepline.cpp
    wepline.hpp
    weputil.cpp
    weputil.hpp
    wheels.cpp
    wheels.hpp
    wheelsi.cpp
    wsphere.cpp
    wsphere.hpp
)

add_library(machphys OBJECT ${MACHPHYS_SOURCES})
