
set(RENDER_SOURCES
    alphagrp.cpp
    animcurs.cpp
    animcurs.hpp
    camera.cpp
    camera.hpp
    capable.cpp
    capable.hpp
    capablei.cpp
    capable.ipp
    CMakeLists.txt
    colmap.cpp
    colmap.hpp
    colour.cpp
    colour.hpp
    colour.ipp
    coplagrp.cpp
    cursor2d.cpp
    cursor2d.hpp
    device.cpp
    device.hpp
    devicei.cpp
    display.cpp
    display.hpp
    displayi.cpp
    dlyspin.cpp
    driv.cpp
    driver.cpp
    driv.hpp
    drivi.cpp
    drivsel.cpp
    drivsel.hpp
    envirnmt.cpp
    envirnmt.hpp
    fixdcurs.cpp
    fixdcurs.hpp
    fixpt.cpp
    fixptvec.cpp
    font.cpp
    fwmatmap.hpp
    glmath.cpp
    gxmeshload.cpp
    hierbuil.cpp
    hierbuil.hpp
    hierload.cpp
    hierload.hpp
    hsv.cpp
    hsv.hpp
    illumine.cpp
    inlight.cpp
    inpoints.cpp
    internal/alphagrp.hpp
    internal/capablei.hpp
    internal/capablei.ipp
    internal/colpack.hpp
    internal/coplagrp.hpp
    internal/cpfactry.ctp
    internal/cpfactry.hpp
    internal/debug.hpp
    internal/devicei.hpp
    internal/devicei.ipp
    internal/displayi.hpp
    internal/dlyspin.hpp
    internal/driver.hpp
    internal/drivi.hpp
    internal/fixpt.hpp
    internal/fixptvec.hpp
    internal/fn_stars.hpp
    internal/font.hpp
    internal/glmath.hpp
    internal/gxmeshload.hpp
    internal/illumine.hpp
    internal/illumine.ipp
    internal/inlight.hpp
    internal/inlight.ipp
    internal/inpoints.hpp
    internal/internal.hpp
    internal/intmap.hpp
    internal/lightbuf.hpp
    internal/lightbuf.ipp
    internal/linediag.hpp
    internal/linediag.ipp
    internal/matapply.hpp
    internal/matapply.ipp
    internal/matbody.hpp
    internal/matbody.ipp
    internal/matmgr.hpp
    internal/meshfact.hpp
    internal/meshid.hpp
    internal/meshload.hpp
    internal/mmx.hpp
    internal/modeobsv.hpp
    internal/nonmmx.hpp
    internal/pixelfmt.hpp
    internal/polysord.hpp
    internal/polysorp.hpp
    internal/ren_pch.hpp
    internal/starsi.hpp
    internal/starsi.ipp
    internal/surfbody.hpp
    internal/surfmgri.hpp
    internal/texbody.hpp
    internal/texbody.ipp
    internal/texseti.hpp
    internal/tlpoly.hpp
    internal/trigroup.hpp
    internal/trigroup.ipp
    internal/ttfpolyi.hpp
    internal/ttfpolyi.ipp
    internal/vpmap.hpp
    internal/vpmap.ipp
    internal/vtxdata.hpp
    internal/vtxmat.hpp
    intmap.cpp
    lightbuf.cpp
    light.cpp
    light.hpp
    linediag.cpp
    litxform.hpp
    matapply.cpp
    matbody.cpp
    material.cpp
    material.hpp
    material.ipp
    matmap.hpp
    matmgr.cpp
    matvec.cpp
    matvec.hpp
    mesh.cpp
    meshfact.cpp
    mesh.hpp
    meshid.cpp
    meshinst.cpp
    meshinst.hpp
    meshload.cpp
    mmx.cpp
    modeobsv.cpp
    node.cpp
    node.hpp
    nonmmx.cpp
    normmap.cpp
    normmap.hpp
    pixelfmt.cpp
    points.cpp
    points.hpp
    polysord.cpp
    polysorp.cpp
    render.cpp
    render.hpp
    scale.cpp
    scale.hpp
    scale.ipp
    spinpoly.cpp
    spinpoly.hpp
    stars.cpp
    stars.hpp
    starsi.cpp
    stats.cpp
    stats.hpp
    stats.ipp
    surface.cpp
    surface.hpp
    surfbody.cpp
    surfmgr.cpp
    surfmgr.hpp
    surfmgri.cpp
    texbody.cpp
    texmgr.hpp
    texset.cpp
    texset.hpp
    texseti.cpp
    texture.cpp
    texture.hpp
    tlpoly.cpp
    triangle.cpp
    triangle.hpp
    trigroup.cpp
    trilist.cpp
    trilist.hpp
    ttfpoly.cpp
    ttfpoly.hpp
    ttfpolyi.cpp
    ttftris.cpp
    ttftris.hpp
    uvanim.cpp
    uvanim.hpp
    uvflip.cpp
    uvflip.hpp
    uvtrans.cpp
    uvtrans.hpp
    vertex.cpp
    vertex.hpp
    vpmap.cpp
    vtxdata.cpp
    vtxmat.cpp
)

add_library(render OBJECT ${RENDER_SOURCES})
