
set(WORLD4D_SOURCES
    alphsimp.cpp
    alphsimp.hpp
    animdata.cpp
    axistrak.cpp
    axistrak.hpp
    axistrak.ipp
    axisturn.cpp
    axisturn.hpp
    backgrnd.cpp
    backgrnd.hpp
    bbxselec.cpp
    bbxselec.hpp
    camera.cpp
    camera.hpp
    camshake.cpp
    camshake.hpp
    camshake.ipp
    camvolum.cpp
    camvolum.hpp
    coldata.cpp
    coldata.hpp
    colodata.cpp
    colodata.hpp
    colpulse.cpp
    colpulse.hpp
    complexi.cpp
    composii.cpp
    composit.cpp
    composit.hpp
    compplai.cpp
    compplan.cpp
    compplan.hpp
    custom.cpp
    custom.hpp
    custom.ipp
    dbtimer.hpp
    domain.cpp
    domain.hpp
    domaini.cpp
    domasign.hpp
    emcolplan.cpp
    emcolplan.hpp
    entity.cpp
    entity.hpp
    entityi.cpp
    entscale.cpp
    entscale.hpp
    entscale.ipp
    entyfilt.cpp
    entyfilt.hpp
    entyiter.cpp
    entyiter.hpp
    entyplan.cpp
    entyplan.hpp
    envirnmt.cpp
    envirnmt.hpp
    fdedapln.cpp
    fdedapln.hpp
    framereg.cpp
    framereg.hpp
    framereg.ipp
    fwmateri.hpp
    fwrdplan.hpp
    garbcoll.cpp
    garbcoll.hpp
    genecomp.cpp
    genecomp.hpp
    generic.cpp
    generic.hpp
    genrepos.cpp
    genrepos.hpp
    genrepos.ipp
    gusplan.cpp
    gusplan.hpp
    internal/animdata.hpp
    internal/complexi.hpp
    internal/composii.hpp
    internal/compplai.hpp
    internal/domaini.hpp
    internal/entityi.hpp
    internal/entityi.ipp
    internal/lightdat.hpp
    internal/lighti.hpp
    internal/multicol.hpp
    internal/multitex.hpp
    internal/nolight.hpp
    internal/pendplan.ctf
    internal/pendplan.hpp
    internal/planfuns.ctf
    internal/planfuns.hpp
    internal/snddata.hpp
    internal/snddata.ipp
    internal/soundmai.hpp
    internal/subjecti.hpp
    internal/texdata.hpp
    internal/uvdata.hpp
    internal/w4d_pch.hpp
    light.cpp
    light.hpp
    lightdat.cpp
    link.cpp
    link.hpp
    link.ipp
    linvplan.cpp
    linvplan.hpp
    lllist.cpp
    lllist.hpp
    logger.cpp
    logger.hpp
    manager.cpp
    manager.hpp
    manager.ipp
    matfrmpl.cpp
    matfrmpl.hpp
    matplan.cpp
    matplan.hpp
    matplan.ipp
    matseqpl.cpp
    matseqpl.hpp
    matseqpl.ipp
    mcentity.cpp
    mcentity.hpp
    meshplan.cpp
    meshplan.hpp
    multicol.cpp
    multitex.cpp
    mvecccha.cpp
    mvecccha.hpp
    mveccple.cpp
    mveccple.hpp
    mvececha.cpp
    mvececha.hpp
    nolight.cpp
    objtrack.cpp
    objtrack.hpp
    objtrack.ipp
    observer.cpp
    observer.hpp
    observer.ipp
    observfw.hpp
    obtrmpln.cpp
    obtrmpln.hpp
    obtrspln.cpp
    obtrspln.hpp
    persist.cpp
    persist.hpp
    planentr.cpp
    planentr.hpp
    pndplan.ctf
    pndplan.ctp
    pndplan.hpp
    portal.cpp
    portal.hpp
    renerror.hpp
    root.cpp
    root.hpp
    scalplan.cpp
    scalplan.hpp
    scalplan.ipp
    scenemgr.cpp
    scenemgr.hpp
    shadow.cpp
    shadow.hpp
    simintpl.cpp
    simintpl.hpp
    simplsca.cpp
    simplsca.hpp
    snddata.cpp
    soundmai.cpp
    soundman.cpp
    soundman.hpp
    spin.cpp
    spin.hpp
    sprite3d.cpp
    sprite3d.hpp
    stars.cpp
    stars.hpp
    stars.ipp
    subjecfw.hpp
    subject.cpp
    subject.hpp
    subjecti.cpp
    texdata.cpp
    uvdata.cpp
    uvplan.cpp
    uvplan.hpp
    uvtrans.cpp
    uvtrans.hpp
    valplan.cpp
    valplan.hpp
    visplan.cpp
    visplan.hpp
    world4d.hpp
)

add_library(world4d OBJECT ${WORLD4D_SOURCES})
